--- a/client/Login/Login.html
+++ b/client/Login/Login.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <div id="main_div" class="container col-4">
+            <img src="logini.png" alt="login" class="login_icon">
             <form action="#" onsubmit="getformvalue(event)">
                 <div>
                     <label for="email" class="form-label">Enter Your Email</label>
