--- a/client/Authentication_failed/Failed.html
+++ b/client/Authentication_failed/Failed.html
@@ -7,28 +7,36 @@
     <title>Booking Page</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="Failed.css" >
+    <link rel="stylesheet" href="Failed.css">
 </head>
 
 <body id="body">
+    <header>
+        <div class="divtime">
+            <h4 id="time">
+                
+            </h4>
+        </div>
+    </header>
     <main>
-<h1>Authentication Failed</h1>
-<div class="icon">
-    <img src="Authentication_failed.png" alt="XX">
-</div>
+        <h1>Authentication Failed</h1>
+        <div class="icon">
+            <img src="Authentication_failed.png" alt="XX">
+        </div>
 
-<div>
-    <button  class="login" onclick="redirectlogin(event)">
-        Login
-    </button>
-    
-    <Button class="signup" onclick="redirectsignup(event)">
-        Signup
-    </Button>
-</div>
+        <div>
+            <button class="login" onclick="redirectlogin(event)">
+                Login
+            </button>
+
+            <Button class="signup" onclick="redirectsignup(event)">
+                Signup
+            </Button>
+        </div>
     </main>
     <footer>
         <div class="about">
+            <hr class="linebreak">
             <h4>About</h4>
             <p>Pratap Bus Booking service</p>
             <p>Office Address: infront of shubash statue banda road atarra</p>
@@ -42,4 +50,5 @@
         crossorigin="anonymous"></script> -->
     <script src="./Failed.js" defer></script>
 </body>
+
 </html>
