--- a/client/Signup/Signup.html
+++ b/client/Signup/Signup.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <div id="main_div" class=" container col-4">
+           <img src="add-friend.png" alt="Signup" class="signupimg">
             <form action="#" onsubmit="getformvalue(event)">
                 <div>
                     <span>
