--- a/client/Booking_Page/Booking.html
+++ b/client/Booking_Page/Booking.html
@@ -67,16 +67,16 @@
         <form action="#" class="form-container">
             <h1>PASSENGER DETAILS</h1>
             <label for="name"><b>Name</b></label>
-            <input type="text" placeholder="Enter Name" name="name" required>
+            <input type="text" placeholder="Enter Name" id="name" required>
 
             <label for="age"><b>Age</b></label>
-            <input type="text" placeholder="Enter Age" name="age" required>
+            <input type="text" placeholder="Enter Age" id="age" required>
 
             <label for="phnumber"><b>Phonenumber</b></label>
-            <input type="text" placeholder="Enter Email" name="phnumber" required>
+            <input type="text" placeholder="Enter Email" id="phnumber" required>
 
             <label for="amnt"><b>Amount</b></label>
-            <input type="text" id="amnt" name="amnt" readonly>
+            <input type="text" id="amnt" id="amnt" readonly>
 
             <button type="submit" class="btn" onclick="BookTicket(event)">Book</button>
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
