--- a/client/Signup/Signup.html
+++ b/client/Signup/Signup.html
@@ -12,13 +12,13 @@
 
 <body>
     <header>
-        <div>
-
+        <div id="Login_redirect">
+            <button onClick="redirect()"><img src="logini.png" alt="Login"></button>
         </div>
     </header>
     <main>
         <div id="main_div" class=" container col-4">
-           <img src="add-friend.png" alt="Signup" class="signupimg">
+            <img src="add-friend.png" alt="Signup" class="signupimg">
             <form action="#" onsubmit="getformvalue(event)">
                 <div>
                     <span>
