--- a/client/Booking_Page/Booking.html
+++ b/client/Booking_Page/Booking.html
@@ -5,14 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">>
     <title>Booking Page</title>
-    <header>
-        <div class="container" id="lgbtn">
-            <button href="#" class="btn btn-info btn-lg" onclick="logoutbutton(event)">
-                <span class="glyphicon glyphicon-log-out"></span> Log out
-            </button>
-            </p>
-        </div>
-    </header>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="Booking.css">
@@ -32,6 +24,12 @@
 <body id="body">
     <header>
         <h1>PRATAP LUXURY BUS SERVICE</h1>
+        <div class="container" id="lgbtn">
+            <button href="#" class="btn btn-info btn-lg" onclick="logoutbutton(event)">
+                <span class="glyphicon glyphicon-log-out"></span> Log out
+            </button>
+            </p>
+        </div>
 
         <div class="divtime">
             <h4 id="time">
@@ -78,6 +76,8 @@
             <label for="amnt"><b>Amount</b></label>
             <input type="text" id="amnt" id="amnt" readonly>
 
+            <input type="text" placeholder="seat Name" id="seat_name" readonly>
+
             <button type="submit" class="btn" onclick="BookTicket(event)">Book</button>
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
@@ -87,99 +87,99 @@
         <div id="main_div">
             <div id="subdiv1">
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L1" onclick="openForm(value,name)">
                         L1
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L2"  onclick="openForm(value,name)">
                         L2
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L3" onclick="openForm(value,name)">
                         L3
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L4" onclick="openForm(value,name)">
                         L4
                     </button>
                 </div>
             </div>
             <div id="subdiv2">
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L5" onclick="openForm(value,name)">
                         L5
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L6" onclick="openForm(value,name)">
                         L6
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L7" onclick="openForm(value,name)">
                         L7
                     </button>
                 </div>
                 <br>
                 <div>
-                    <button class="sbtn" id="l" value="l" onclick="openForm(value)">
+                    <button class="sbtn" id="l" value="l" name="L8" onclick="openForm(value,name)">
                         L8
                     </button>
                 </div>
             </div>
             <div id="subdiv3">
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U1" onclick="openForm(value,name)">
                         UP1
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U2" onclick="openForm(value,name)">
                         UP2
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U3" onclick="openForm(value,name)">
                         UP3
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U4" onclick="openForm(value,name)">
                         UP4
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U5" onclick="openForm(value,name)">
                         UP5
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U6" onclick="openForm(value,name)">
                         UP6
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U7" onclick="openForm(value,name)">
                         UP7
                     </button>
                 </div>
                 <div>
-                    <button class="sbtn" id="U" value="U" onclick="openForm(value)">
+                    <button class="sbtn" id="U" value="U" name="U8" onclick="openForm(value,name)">
                         UP8
                     </button>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="about_footer">
         <div class="about">
             <hr class="linebreak">
             <h4>About</h4>
